Archive2/d5/0a06e3d2a4237e/output
+ g++-4.8 -std=c++11 -O2 -Wall -Wextra -Werror -pedantic -pthread main.cpp
main.cpp:8:1: error: static assertion failed: destructor should not matter, should it?
 static_assert(std::is_nothrow_constructible<bad>(), "destructor should not matter, should it?");
 ^
